<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_scrolling"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScrollingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mcv"
            android:layout_marginTop="@dimen/margin_mcv"
            android:layout_marginEnd="@dimen/margin_mcv"
            android:layout_marginBottom="@dimen/margin_mcv"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clalex"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clAncho"
                android:background="@color/CLcolor"
                android:paddingStart="@dimen/paddind_cl"
                android:paddingTop="@dimen/paddind_cl"
                android:paddingEnd="@dimen/paddind_cl">

                <ImageView
                    android:id="@+id/ivFoto1"
                    android:layout_width="@dimen/Imagen"
                    android:layout_height="@dimen/Imagen"
                    android:background="@color/rojo"
                    android:importantForAccessibility="no"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/tvAncho"
                    android:text="@string/alexelcapo"
                    android:textSize="@dimen/tamañonombre"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/tvMargen"
                    app:layout_constraintTop_toTopOf="@id/ivFoto1"
                    app:layout_constraintStart_toEndOf="@id/ivFoto1"
                    app:layout_constraintBottom_toBottomOf="@id/ivFoto1"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textoalex"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/tvMargen"
                    android:text="@string/textoalex"
                    android:textSize="@dimen/tamañotexto"
                    app:layout_constraintTop_toBottomOf="@id/ivFoto1"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/boton1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/tvMargen"
                    android:text="@string/wiki"
                    app:icon="@drawable/ic_baseline_search_24"
                    app:layout_constraintBottom_toBottomOf="@id/clalex"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mcv"
            android:layout_marginEnd="@dimen/margin_mcv"
            android:layout_marginBottom="@dimen/margin_mcv"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clknekro"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clAncho"
                android:background="@color/CLcolor"
                android:paddingStart="@dimen/paddind_cl"
                android:paddingTop="@dimen/paddind_cl"
                android:paddingEnd="@dimen/paddind_cl">

                <ImageView
                    android:id="@+id/ivFoto2"
                    android:layout_width="@dimen/Imagen"
                    android:layout_height="@dimen/Imagen"
                    android:background="@color/rojo"
                    android:importantForAccessibility="no"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/tvAncho"
                    android:text="@string/knekro"
                    android:textSize="@dimen/tamañonombre"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/tvMargen"
                    app:layout_constraintTop_toTopOf="@id/ivFoto2"
                    app:layout_constraintStart_toEndOf="@id/ivFoto2"
                    app:layout_constraintBottom_toBottomOf="@id/ivFoto2"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textoknekro"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/tvMargen"
                    android:text="@string/textoknekro"
                    android:textSize="@dimen/tamañotexto"
                    app:layout_constraintTop_toBottomOf="@id/ivFoto2"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/boton2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/tvMargen"
                    android:text="@string/wiki"
                    app:icon="@drawable/ic_baseline_search_24"
                    app:layout_constraintBottom_toBottomOf="@id/clknekro"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mcv"
            android:layout_marginEnd="@dimen/margin_mcv"
            android:layout_marginBottom="@dimen/margin_mcv"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cljuja"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clAncho"
                android:background="@color/CLcolor"
                android:paddingStart="@dimen/paddind_cl"
                android:paddingTop="@dimen/paddind_cl"
                android:paddingEnd="@dimen/paddind_cl">

                <ImageView
                    android:id="@+id/ivFoto3"
                    android:layout_width="@dimen/Imagen"
                    android:layout_height="@dimen/Imagen"
                    android:background="@color/rojo"
                    android:importantForAccessibility="no"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/tvAncho"
                    android:text="@string/juja"
                    android:textSize="@dimen/tamañonombre"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/tvMargen"
                    app:layout_constraintTop_toTopOf="@id/ivFoto3"
                    app:layout_constraintStart_toEndOf="@id/ivFoto3"
                    app:layout_constraintBottom_toBottomOf="@id/ivFoto3"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textojuja"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/tvMargen"
                    android:text="@string/textojuja"
                    android:textSize="@dimen/tamañotexto"
                    app:layout_constraintTop_toBottomOf="@id/ivFoto3"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/boton3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/tvMargen"
                    android:text="@string/wiki"
                    app:icon="@drawable/ic_baseline_search_24"
                    app:layout_constraintBottom_toBottomOf="@id/cljuja"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mcv"
            android:layout_marginEnd="@dimen/margin_mcv"
            android:layout_marginBottom="@dimen/margin_mcv"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clillo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clAncho"
                android:background="@color/CLcolor"
                android:paddingStart="@dimen/paddind_cl"
                android:paddingTop="@dimen/paddind_cl"
                android:paddingEnd="@dimen/paddind_cl">

                <ImageView
                    android:id="@+id/ivFoto4"
                    android:layout_width="@dimen/Imagen"
                    android:layout_height="@dimen/Imagen"
                    android:background="@color/rojo"
                    android:importantForAccessibility="no"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/tvAncho"
                    android:text="@string/illo"
                    android:textSize="@dimen/tamañonombre"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/tvMargen"
                    app:layout_constraintTop_toTopOf="@id/ivFoto4"
                    app:layout_constraintStart_toEndOf="@id/ivFoto4"
                    app:layout_constraintBottom_toBottomOf="@id/ivFoto4"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textoillo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/tvMargen"
                    android:text="@string/textoillo"
                    android:textSize="@dimen/tamañotexto"
                    app:layout_constraintTop_toBottomOf="@id/ivFoto4"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/boton4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/tvMargen"
                    android:text="@string/wiki"
                    app:icon="@drawable/ic_baseline_search_24"
                    app:layout_constraintBottom_toBottomOf="@id/clillo"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>